SOCKET: need update user's socket.id.
