# srcs/requirements/backend/nest-js/src/chat/chat.controller.ts
@@ -1,11 +1,9 @@
 import { Controller, Get, Post, Body, Patch, Param, Delete, NotFoundException, Query, HttpException, HttpStatus, UseGuards, Head, SetMetadata, Req } from '@nestjs/common';
 import { ChatService } from './chat.service';
-import { UpdateChannelDto } from './dto/chat-channel.dto';
 import { CreateMessageDto, UpdateMessageDto } from './dto/chat-message.dto';
 import { UsersService } from 'src/users/users.service';
 import { Colors as C } from '../colors';
 import { AuthGuard } from 'src/auth/auth.guard';
-import { JwtService } from '@nestjs/jwt';
 
 /**
  * Bu @UseGuard()'i buraya koyarsan icerisindeki
@@ -17,7 +15,6 @@ export class ChatController {
 	constructor(
 		private readonly chatService: ChatService,
 		private readonly usersService: UsersService,
-		private readonly jwtService: JwtService,
 	) {}
 
 	// ---------- Create ---------
@@ -25,36 +22,6 @@ export class ChatController {
 	// async createChannel(@Body() createChannelDto: CreateChannelDto) {
 	// 	return await this.chatService.createChannel(createChannelDto);
 	// }
-
-	// @Post('@:channel')
-	@Post('/channel')
-	async findChannelFirst(
-		@Req() {user},
-		// @Param('channel') channel: string,
-		@Query('channel') channel: string,
-		@Query('relations') relations: string[] | null | 'all', // -> {{baseUrl}}:3000/chat/@all?relations=users&relations=admins.
-		@Body() relationData: {userCookie: string, socketID: string}, // -> Bu da fetch istegi atarken body kismina yazdigimiz bilgiler.
-	) {
-		console.log(`${C.B_YELLOW}POST: Channel: [${channel}], Relation: [${relations}]${C.END}`);
-		if (!relationData)
-			return (new Error("@Post('@:channel/:relation'): findChannelFirst(): @Body(): Cookie not found!"));
-		console.log("channel'deki ilk kontrol.", user.login);
-		// const decoded = jwt.verify(relationData.userCookie, process.env.JWT_PASSWORD_HASH);
-		const tmpUser = await this.usersService.findOne(null, user.login as string);
-		if (!tmpUser)
-			throw (new HttpException("@Post(':channel/:relation'): (Cookie): @findOne(): login: User does not exist!",
-				HttpStatus.INTERNAL_SERVER_ERROR));
-		// -----------------------
-
-		const isId = /^\d+$/.test(channel); // Bakiyor bu girilen deger numara mi degil mi? numaraysa true donduruyor.
-		const tmpChannel = await this.chatService.findChannel(isId ? +channel : channel, relations);
-		if (!tmpChannel)
-			throw (new NotFoundException("@Get('@:channel'): findChannel(): id&name: Channel does not exist!"));
-		const invData = await this.chatService.checkInvolvedUser(tmpChannel, tmpUser);
-		console.log(`POST ile alinan ve involved olarak duzenlenmis data: ${invData} alttaki`, invData);
-		return (invData);
-		// return (tmpChannel);
-	}
 
 	@Post(':message')
 	createMessage(@Body() createMessageDto: CreateMessageDto) {
@@ -74,107 +41,51 @@ export class ChatController {
 	 * @param relations 
 	 * @returns 
 	 */
-	// @Get('@:channel')
 	@Get('/channel')
-	// @SetMetadata('roles', ['admin'])
+	// @SetMetadata('login', ['gsever', 'akaraca'])
 	async findChannel(
 		@Req() {user},
-		// @Param('channel') channel: string,
-		@Query('channel') channel: string,
+		@Query('channel') channel: string | undefined,
 		@Query('relations') relations: string[] | null | 'all',
 	) {
-		console.log(`${C.B_GREEN}GET: Channel: [${channel}], Relation: [${relations}]${C.END}`);
-		console.log("@Req() user:", user);
-		const isId = /^\d+$/.test(channel); // Bakiyor bu girilen deger numara mi degil mi? numaraysa true donduruyor.
-		console.log("isId:", isId);
-		const tmpChannel = await this.chatService.findChannel(isId ? +channel : channel, relations);
-		if (!tmpChannel)
-			throw (new NotFoundException("@Get(): findChannel(): id&name: Channel does not exist!"));
-		return (tmpChannel);
+		try
+		{
+			console.log(`${C.B_GREEN}GET: Channel: [${channel}], Relation: [${relations}]${C.END}`);
+			console.log("@Req() user:", user);
+			return (await this.chatService.findChannel(channel, relations));
+		}
+		catch (err)
+		{
+			console.log("@Get('/channel'): ", err);
+			return (null)
+		}
 	}
-
-// // Burada kaldin
-// 	@Get('messages/all')
-// 	findAllMessage() {
-// 		console.log("Butun Message'ler alindi.")
-// 		return this.chatService.findAllMessage();
-// 	}
-
-// 	// oneeeeeeeeeeeeeeee
-// 	@Get(':/id(\\d+)')
-// 	async findOneChannelId(@Param('id') id?: string) {
-// 	}
-
-// 	@Get(':name')
-// 	async findOneChannelName(@Param('name') name: string) {
-// 	}
-
-// 	@Get(':message:id(\\d+)')
-// 	findOneMessage(@Param('id') id: string) {
-// 		return this.chatService.findOneMessage(+id);
-// 	}
-
-// 	// ---------- Update ---------
-// 	@Patch(':message:id(\\d+)')
-// 	updateChannel(@Param('id') id: string, @Body() updateChannelDto: UpdateChannelDto) {
-// 		return this.chatService.updateChannel(+id, updateChannelDto);
-// 	}
-
-// 	@Patch(':message:id(\\d+)')
-// 	updateMessage(@Param('id') id: string, @Body() updateMessageDto: UpdateMessageDto) {
-// 		return this.chatService.updateMessage(+id, updateMessageDto);
-// 	}
 
 	// ---------- Delete ---------
-
-	@Delete('@:channel')
-	async removeChannel(@Param('channel') channel: string) {
-		console.log(`DELETE: Channel: ${channel}`);
-		if (channel === "all")
+	@Delete('/channel')
+	async removeChannel(
+		@Req() {user},
+		@Query('channel') channel: string | undefined
+	){
+		try
 		{
-			const	response = await this.chatService.removeAllChannel();
-			console.log(`Butun Channel'ler 'silindi'!`);
-			return (response);
-		}
-		const isId = /^\d+$/.test(channel); // Bakiyor bu girilen deger numara mi degil mi? numaraysa true donduruyor.
-		if (isId === true)
-		{
-			console.log(`id ->>>>>>>>>>>`);
-			const tmpUser = await this.chatService.removeChannel(+channel);
-			if (!tmpUser)
-				throw (new NotFoundException("@Delete('@:channel'): removeChannel(): id: Channel does not exist!"));
-			return (tmpUser);
-		}
-		else
-		{
-			console.log(`nameeeeeeeee ----------->`);
+			console.log(`DELETE: Channel: ${channel}`);
+			if (channel === "all")
+			{
+				const	response = await this.chatService.removeAllChannel();
+				console.log(`All channels removed!`);
+				return (response);
+			}
 			const tmpUser = await this.chatService.removeChannel(channel);
-			console.log("donen deger", tmpUser);
 			if (!tmpUser)
-				throw (new NotFoundException("@Delete('@:channel'): removeChannel(): name: Channel does not exist!"));
+				throw (new NotFoundException("name: Channel does not exist!"));
 			return (tmpUser);
 		}
+		catch (err)
+		{
+			console.error("@Delete('/channel'): removeChannel(): ", err);
+			return (null);
+		}
+
 	}
-
-	// @Delete(':messages')
-	// removeAllMessage() {
-	// 	return this.chatService.removeAllMessage();
-	// }
-
-	// @Delete(':channel:id(\\d+)')
-	// async removeChannelId(@Param('id') id: string) {
-	// 	const	tmpChannel = this.chatService.findChannel(+id);
-
-	// 	return (this.chatService.removeChannel(+id));
-	// }
-
-	// @Delete(':channel:name(\\d+)')
-	// async removeChannelName(@Param('name') name: string) {
-	// 	// return this.chatService.removeAllChannel();
-	// }
-
-	// @Delete(':message:id(\\d+)')
-	// removeMessage(@Param('id') id: string) {
-	// 	return this.chatService.removeAllMessage();
-	// }
 }
